--- a/templates/issue.html
+++ b/templates/issue.html
@@ -49,6 +49,15 @@
         .tree-table tr:hover {
             background: #f1f7ff;
         }
+        .treeview-container {
+            width: 100%;
+            min-width: 0;
+            max-width: 100%;
+        }
+        .treeview-table {
+            width: 100%;
+            table-layout: auto;
+        }
     </style>
     <script>
         // Store items_by_category as JSON in a script tag for safe JS parsing
