--- a/templates/receive.html
+++ b/templates/receive.html
@@ -46,6 +46,15 @@
         .tree-table tr:hover {
             background: #f1f7ff;
         }
+        .treeview-container {
+            width: 100%;
+            min-width: 0;
+            max-width: 100%;
+        }
+        .treeview-table {
+            width: 100%;
+            table-layout: auto;
+        }
     </style>
     <script>
     function updateDescriptionOptions() {
