--- a/templates/print_ledger.html
+++ b/templates/print_ledger.html
@@ -362,8 +362,14 @@
                     {% endfor %}
                     {% if sn == 1 %}
                         <tr>
-                            <td colspan="10" class="no-data">No transaction entries found for the selected item.</td>
+                            <td colspan="10" class="no-data">No transactions available for this item.</td>
                         </tr>
+                    {% endif %}
+                    {% if not transactions %}
+                        <tr>
+                            <td colspan="10" class="no-data">No transactions available for this item.</td>
+                        </tr>
+
                     {% endif %}
                 </tbody>
             </table>
